--- a/src/Components/SideBar/SideBar.scss
+++ b/src/Components/SideBar/SideBar.scss
@@ -9,7 +9,7 @@
   z-index: 6;
   left: 0;
   margin-left: 0;
-  background-color: #02000a;
+  background-color: var(--secondary-color);
   box-shadow: var(--box-shadow);
   // border-top-right-radius: 5px;
   // border-bottom-right-radius: 5px;
